# Moldit-

./: .dockerignore  .env.example  .gitignore  Analise_Completa_MPP_Moldit.md  CLAUDE.md  PP1_ANALISE_LOGICA_DADOS_v1.md  PP1_SYSTEM_OVERVIEW.md  README.md  biome.json  claude-backend.md  claude-bdmestre.md  claude-frontend.md  claude-gantt.md  docker-compose.dev.yml  docker-compose.hub.yml  docker-compose.yml  isop-max-otd.mjs  logic.md  package.json  plansistem.logic  pnpm-lock.yaml  pyproject.toml  requirements.txt  start.bat  start.sh
apps/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  package.json  pyproject.toml  requirements.txt
backend/: Makefile  isop_parser.py  llm_engine.py  main.py  models.py  pyproject.toml  requirements.txt  scheduler.py  types.py
backend/alerts/: engine.py  rules.py  store.py  types.py
backend/analytics/: __init__.py  coverage_audit.py  ctp.py  expedition.py  late_delivery.py  order_tracking.py  replan_proposals.py  stock_projection.py  workforce_forecast.py
backend/api/: __init__.py  alerts.py  console.py  copilot.py  data.py  data_config.py  data_core.py  data_exec.py  data_sim.py  explain.py  explorer.py  ml.py  reports.py  workforce.py
backend/audit/: __init__.py  counterfactual.py  diff.py  logger.py  store.py  templates.py  types.py
backend/config/: __init__.py  loader.py  presets.py  types.py
backend/console/: __init__.py  action_items.py  day_summary.py  expedition_today.py  machines_today.py  state_phrase.py  tomorrow_prep.py
backend/copilot/: __init__.py  engine.py  executors_action.py  executors_master.py  executors_query.py  executors_viz.py  llm_provider.py  prompts.py  state.py  tools.py  types.py
backend/cpo/: __init__.py  cached_pipeline.py  chromosome.py  cpsat_polish.py  optimizer.py  population.py  surrogate.py
backend/data/: ISOP_Nikufra_27_2.xlsx
backend/dqa/: __init__.py  trust_index.py
backend/explain/: __init__.py  formats.py  glossary.py  phrases.py
backend/guardian/: __init__.py  guardian.py
backend/journal/: __init__.py  journal.py
backend/learning/: __init__.py  calibration.py  context.py  execution_store.py  optimizer.py  reward.py  smart.py  store.py  transfer.py  types.py
backend/ml/: __init__.py  bootstrap.py  cold_start.py  data_model.py  feature_engineering.py  store.py
backend/parser/: __init__.py  isop_reader.py  mpp_reader.py
backend/reports/: email_sender.py  generator.py  types.py
(+997 files in other folders)
